MacOS 10.13 SDK Workaround for bluetooth CBCentralManagerState.

The 10.13 SDK deprecates the CBCentralManagerState enum, but marks the
replacement enum with limited availability, making it unusable. API methods
now return the new enum, so to compare enum values the new enum must be cast.
This is an SDK bug: rdar://33375728

Using the deprecated enum means we'll eventually get deprecation warnings
when trying to bump the minumum supported SDK version to 10.13, but maybe
the SDK will be in a better shape by then.

Bug: 746559
Change-Id: I0ed7d563ee00578a442f5b2986c4b516cffbc236