device/bluetooth/bluetooth_adapter_mac.mm
@@ -158,8 +158,9 @@ bool BluetoothAdapterMac::IsInitialized() const {
 bool BluetoothAdapterMac::IsPresent() const {
   bool is_present = !address_.empty();
   if (IsLowEnergyAvailable()) {
-    is_present = is_present || ([low_energy_central_manager_ state] !=
-                                CBManagerStateUnsupported);
+    is_present =
+        is_present || (FixSDKEnum([low_energy_central_manager_ state]) !=
+                       CBCentralManagerStateUnsupported);
   }
   return is_present;
 }
@@ -167,8 +168,9 @@ bool BluetoothAdapterMac::IsPresent() const {
 bool BluetoothAdapterMac::IsPowered() const {
   bool is_powered = classic_powered_;
   if (IsLowEnergyAvailable()) {
-    is_powered = is_powered || ([low_energy_central_manager_ state] ==
-                                CBManagerStatePoweredOn);
+    is_powered =
+        is_powered || (FixSDKEnum([low_energy_central_manager_ state]) ==
+                       CBCentralManagerStatePoweredOn);
   }
   return is_powered;
 }
@@ -592,17 +594,18 @@ void BluetoothAdapterMac::LowEnergyDeviceUpdated(
   }
 }
 
-// TODO(crbug.com/511025): Handle state < CBManagerStatePoweredOff.
+// TODO(crbug.com/511025): Handle state < CBCentralManagerStatePoweredOff.
 void BluetoothAdapterMac::LowEnergyCentralManagerUpdatedState() {
   VLOG(1) << "Central manager state updated: "
           << [low_energy_central_manager_ state];
-  // A state with a value lower than CBManagerStatePoweredOn implies that
+  // A state with a value lower than CBCentralManagerStatePoweredOn implies that
   // scanning has stopped and that any connected peripherals have been
   // disconnected. Call DidDisconnectPeripheral manually to update the devices'
   // states since macOS doesn't call it.
   // See
   // https://developer.apple.com/reference/corebluetooth/cbcentralmanagerdelegate/1518888-centralmanagerdidupdatestate?language=objc
-  if ([low_energy_central_manager_ state] < CBManagerStatePoweredOn) {
+  if (FixSDKEnum([low_energy_central_manager_ state]) <
+      CBCentralManagerStatePoweredOn) {
     VLOG(1)
         << "Central no longer powered on. Notifying of device disconnection.";
     for (BluetoothDevice* device : GetDevices()) {
