device/bluetooth/bluetooth_low_energy_discovery_manager_mac.mm
@@ -47,8 +47,8 @@ void BluetoothLowEnergyDiscoveryManagerMac::TryStartDiscovery() {
     return;
   }
 
-  if ([central_manager_ state] != CBManagerStatePoweredOn) {
-    VLOG(1) << "TryStartDiscovery != CBManagerStatePoweredOn";
+  if (GetCBManagerState(central_manager_) != CBCentralManagerStatePoweredOn) {
+    VLOG(1) << "TryStartDiscovery != CBCentralManagerStatePoweredOn";
     return;
   }
 
