device/bluetooth/test/bluetooth_test_mac.mm
@@ -114,7 +114,7 @@ void BluetoothTestMac::InitWithoutDefaultAdapter() {
     mock_central_manager_.reset(
         new ScopedMockCentralManager([[MockCentralManager alloc] init]));
     [mock_central_manager_->get() setBluetoothTestMac:this];
-    [mock_central_manager_->get() setState:CBManagerStateUnsupported];
+    [mock_central_manager_->get() setState:CBCentralManagerStateUnsupported];
     adapter_mac_->SetCentralManagerForTesting((id)mock_central_manager_->get());
   }
 }
@@ -130,7 +130,7 @@ void BluetoothTestMac::InitWithFakeAdapter() {
     mock_central_manager_.reset(
         new ScopedMockCentralManager([[MockCentralManager alloc] init]));
     mock_central_manager_->get().bluetoothTestMac = this;
-    [mock_central_manager_->get() setState:CBManagerStatePoweredOn];
+    [mock_central_manager_->get() setState:CBCentralManagerStatePoweredOn];
     adapter_mac_->SetCentralManagerForTesting((id)mock_central_manager_->get());
   }
 }
@@ -141,7 +141,7 @@ void BluetoothTestMac::ResetEventCounts() {
 }
 
 void BluetoothTestMac::SimulateAdapterPoweredOff() {
-  [mock_central_manager_->get() setState:CBManagerStatePoweredOff];
+  [mock_central_manager_->get() setState:CBCentralManagerStatePoweredOff];
 
   for (BluetoothDevice* device : adapter_->GetDevices()) {
     MockCBPeripheral* peripheral_mock = GetMockCBPeripheral(device);
